# Learning

./: .gitignore  README.md
design-patterns/: command_pattern.cpp  singleton.cpp
design-patterns/Abstract_Factory/main/: BUILD  DBFactory.h  DBSimpleFactory.cc  DBSimpleFactory.h  MySQLCommand.cc  MySQLCommand.h  MySQLConnection.cc  MySQLConnection.h  MySQLCursor.cc  MySQLCursor.h  MySQLFactory.cc  MySQLFactory.h  OracleSQLCommand.cc  OracleSQLCommand.h  OracleSQLConnection.cc  OracleSQLConnection.h  OracleSQLCursor.cc  OracleSQLCursor.h  OracleSQLFactory.cc  OracleSQLFactory.h  command.h  connection.h  cursor.h  main.cc
design-patterns/Factory/main/: SpreadSheet.cc  SpreadSheetApplication.cc  SpreadSheetApplication.h  TextDocumentApplication.h  application.cc  application.h  document.h  main.cc
design-patterns/Object Pool/main/: Alien.cc  BUILD  GameObject.h  GameObjectPool.cc  GameObjectPool.h  Missile.h
design-patterns/Object_Pool/: MODULE.bazel
design-patterns/Object_Pool/main/: Alien.h  GameObject.cc  Missile.cc  main.cc
design-patterns/Prototype/main/: Animation.h  Bus.h  Car.cc  Car.h  GameManager.cc  Vehicle.cc
design-patterns/Singleton/singleton_intro/: logs.txt
design-patterns/prototype/: MODULE.bazel
design-patterns/singleton/: MODULE.bazel  logs.txt
design-patterns/singleton_lazy/: MODULE.bazel
design-patterns/singleton_registry/: MODULE.bazel
gTest/intro/: MODULE.bazel
gTest/intro/main/: BUILD  LibraryCode.cpp  LibraryCode.hpp  main.cpp  test.cpp
modern_cpp/: function_pts.cpp
python/intro/: foo.py  foo2.py
(+59 files in other folders)
