load("@bazel_tools//tools/build_defs/cc:defs.bzl", "cc_library", "cc_binary")

cc_library (
    name = "libraryCode",
    srcs = ["LibraryCode.cc"],
    hdrs = ["LibraryCode.h"],
    visibility = ["//visibility:public"],
)

cc_binary (
    name = "myApp",
    srcs = ["main.cc"],
    deps = [":libraryCode"],
)